# mika-bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml  update.sh
config/: README.md  persona.md
config/personas/: anime.md  friendly.md  gamer.md  professional.md  sarcastic.md  scientist.md
deploy/: README.md
deploy/docker/: README.md
deploy/systemd/: README.md
dev-testing/: conftest.py  harness.py  test_admin.py  test_animated.py  test_anime.py  test_antispam.py  test_catalog_smoke.py  test_convert.py  test_dashboard.py  test_devtools.py  test_extra.py  test_finance.py  test_games.py  test_giveaways.py  test_imagegen.py  test_infotools.py  test_learning.py  test_media.py  test_memes.py  test_message_scope.py  test_moderation.py  test_novelty.py  test_nsfw.py  test_osint.py  test_palette.py  test_persona.py  test_presence.py  test_quotes.py  test_science.py  test_search.py  test_social.py  test_text.py  test_tickets.py  test_timezones.py  test_tools_cmds.py  test_update.py  test_web_admin.py  test_welcome.py  test_words.py
dev_docs/: DECISIONS.md  MIKAV2-2026-07-21-RESEARCH.md  MIKAV2-AB-TEST.md  MIKAV2-CHANGELOG.md  MIKAV2-IMPROVEMENT-NOTES.md  MIKAV2-ROLLOUT-2026-07-21.md  README.md  ROADMAP.md
docs/: COMMAND-CLEANUP.md  COSTS.md  DASHBOARD.md  DEPLOY.md  DISCORD-SETUP.md  EXPOSE.md  GETTING-STARTED.md  HONCHO-MEMORY.md  README.md  UPDATING.md
docs/plans/: 2026-07-21-mika-conversation-only.md
frontend/: README.md
frontend/static/: README.md
frontend/templates/: README.md
packaging/: README.release.md
scripts/: package.py
src/: README.md
src/mika/: README.md  __init__.py
src/mika/ai/: README.md  __init__.py
src/mika/ai/learning/: README.md  __init__.py  metrics.py  persona_forge.py  store.py
src/mika/ai/llm/: README.md  __init__.py  client.py  social_policy.py  turn.py
src/mika/bot/: README.md  __init__.py  antispam.py  client.py  greetings.py  media.py  scheduler.py
src/mika/bot/commands/: README.md  __init__.py  admin.py  ai.py  animated.py  anime.py  antispam.py  basic.py  cobalt.py  convert.py  devtools.py  extra.py  finance.py  fun.py  games.py  gif.py  giveaways.py  helpers.py  imagegen.py  images.py  info.py  infotools.py  learning.py  memes.py  moderation.py  novelty.py  nsfw.py  osint.py  palette.py  persona.py  ping.py  presence.py  quotes.py  science.py  search.py  social.py  text.py  tickets.py  timezones.py  tools.py  (+2 more)
src/mika/bot/components/: README.md  __init__.py
src/mika/bot/events/: README.md  __init__.py  antispam.py  members.py  message.py  reactions.py  ready.py
src/mika/bot/features/: README.md  __init__.py
src/mika/cli/: README.md  __init__.py  app.py
src/mika/cli/commands/: README.md  __init__.py  chat.py  cleanup_commands.py  doctor.py  honcho.py  invite.py  learning.py  logs.py  run.py  service.py  setup.py  update.py  userbot.py  web.py
src/mika/core/: README.md  __init__.py  config.py  env_file.py  errors.py  logging.py  paths.py
src/mika/features/: README.md
src/mika/features/moderation/: README.md
src/mika/features/tickets/: README.md
src/mika/llm/: README.md  client.py
src/mika/llm/chat/: README.md  __init__.py  pipeline.py  prompt.py
src/mika/llm/memory/: README.md
src/mika/llm/providers/: README.md
src/mika/llm/tools/: README.md  __init__.py
src/mika/persistence/: README.md  __init__.py  base.py  engine.py  shared_archive.py
src/mika/persistence/models/: README.md  __init__.py  guild_config.py  message.py
src/mika/system/: README.md  __init__.py  manager.py
src/mika/system/units/: README.md
src/mika/userbot/: README.md  __init__.py  client.py
src/mika/web/: README.md  __init__.py  app.py  auth.py  render.py  settings_catalog.py
tests/: README.md  test_cleanup_commands.py  test_client.py  test_conversation_only_startup.py  test_feedback.py  test_media_helpers.py  test_memory.py  test_message_media_context.py  test_openai_compatible_provider.py  test_pipeline.py  test_prompt.py  test_smoke.py  test_social_policy.py  test_social_turn_contracts.py  test_tools.py  test_turn_metrics.py
tools/: README.md  report_turn_metrics.py
tools/hooks/: README.md  check_ai_comments.py  check_comment_ratio.py  check_no_coauthors.py  check_persona_leak.py  check_secrets.py
userbot/: README.md  main.py  requirements.txt
(+51 files in other folders)
